# plover-vcs-plugin

./: .drone.yml  .gitignore  .pylintrc  MANIFEST.in  README.md  install.sh  pyuic.json  setup.cfg  setup.py  test.txt
plover_vcs/: __init__.py  file_watcher.py  plover_vcs.py  vcs_config.py
plover_vcs/message_generator/: git_diff_message_generator.py  line_changes.py  message_generator.py
plover_vcs/resources/: resources.qrc
plover_vcs/ui/: vcs_settings.py  vcs_settings.ui
plover_vcs/vcs/: exception_decorator.py  git_vcs_service.py  vcs_exception.py  vcs_service.py  vcs_service_factory.py
test/: test_file_watcher.py
test/message_generator/: test_git_diff_message_generator.py
