[metadata]
name = plover-vcs-plugin
version = 0.1.0
description = Automated version control for Plover
long_description = file: README.rst
author = Levi Miller
author_email = levi@levimiller.ca
license = GNU General Public License v3 (GPLv3)
url = https://github.com/levimdmiller/plover-vcs-plugin
classifiers =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
  plover>=4.0.0.dev7
  gitpython>=2.1.12
  PyQt5-sip>=4.19.18
  PyQt5>=5.11
setup_requires =
  pytest-runner>=4.0
test_requires =
  pytest>=3.0.1
py_modules = plover-vcs-plugin
packages = plover_vcs

[options.entry_points]
plover.gui.qt.tool =
    plover_vcs_settings = plover_vcs.ui.vcs_settings:VcsSettings

[aliases]
test = pytest

[tool:pytest]
addopts = -ra
